# math-utils

./: CMakeLists.txt  README.md  line.h  lines.cpp  matrix.cpp  matrix.h  planes.h  test.cpp  vector_utils.cpp  vector_utils.h
src/: angles.cpp  angles.h  angles_test.cpp  math-utils.h
src/lin_alg/: lines.h  matrix.cpp  matrix.h  planes.cpp  planes.h  vector_utils.cpp  vector_utils.h
src/lin_alg/tests/: lines_tests.cpp  vector_utils_tests.cpp
tests/: matrix_tests.cpp  planes_tests.cpp  vector_utils_tests.cpp
